--- a/Proyecto_Hotel_L3/WindowsFormsApplication1/Proyecto_Hotel_L3.csproj
+++ b/Proyecto_Hotel_L3/WindowsFormsApplication1/Proyecto_Hotel_L3.csproj
@@ -5,10 +5,10 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5A1AF9AD-6C49-44BC-9E09-018A98215973}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WindowsFormsApplication1</RootNamespace>
-    <AssemblyName>WindowsFormsApplication1</AssemblyName>
+    <AssemblyName>Proyecto_Hotel_L3</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,53 +49,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormApatados.cs">
+    <Compile Include="FormApartados.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormApatados.Designer.cs">
-      <DependentUpon>FormApatados.cs</DependentUpon>
+    <Compile Include="FormApartados.Designer.cs">
+      <DependentUpon>FormApartados.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormAsignador.cs">
+    <Compile Include="FormFactura.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormAsignador.Designer.cs">
-      <DependentUpon>FormAsignador.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormDeudas.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormDeudas.Designer.cs">
-      <DependentUpon>FormDeudas.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormDisponibles.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormDisponibles.Designer.cs">
-      <DependentUpon>FormDisponibles.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormEstado.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormEstado.Designer.cs">
-      <DependentUpon>FormEstado.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormGanancias.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormGanancias.Designer.cs">
-      <DependentUpon>FormGanancias.cs</DependentUpon>
+    <Compile Include="FormFactura.Designer.cs">
+      <DependentUpon>FormFactura.cs</DependentUpon>
     </Compile>
     <Compile Include="FormHdisponibles.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormHdisponibles.Designer.cs">
       <DependentUpon>FormHdisponibles.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormHxhoras.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormHxhoras.Designer.cs">
-      <DependentUpon>FormHxhoras.cs</DependentUpon>
     </Compile>
     <Compile Include="FormMenu.cs">
       <SubType>Form</SubType>
@@ -106,23 +79,11 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormOcupados.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormOcupados.Designer.cs">
-      <DependentUpon>FormOcupados.cs</DependentUpon>
-    </Compile>
     <Compile Include="FormReportes.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormReportes.Designer.cs">
       <DependentUpon>FormReportes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormTganancias.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormTganancias.Designer.cs">
-      <DependentUpon>FormTganancias.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
