--- a/Proyecto_Hotel_L3/WindowsFormsApplication1/Proyecto_Hotel_L3.csproj
+++ b/Proyecto_Hotel_L3/WindowsFormsApplication1/Proyecto_Hotel_L3.csproj
@@ -90,6 +90,9 @@
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu.resx">
+      <DependentUpon>FormMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -111,6 +114,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BL.Apartados\BL.Apartados.csproj">
+      <Project>{71163C79-15AD-4BFF-BF3F-92C9DBDCCFD1}</Project>
+      <Name>BL.Apartados</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
